--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-scikit-learn>=1.3.0
-keras>=2.15.0
-numpy>=1.24.0
-pandas>=2.0.0
-scipy>=1.10.0
-matplotlib>=3.7.0
-seaborn>=0.12.0 
+pandas>=1.3.0
+numpy>=1.21.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
+scikit-learn>=0.24.2
+tensorflow>=2.8.0
